--- a/examenes/package.json
+++ b/examenes/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "pinia": "^2.1.4",
     "postcss": "^8",
