--- a/examenes/package.json
+++ b/examenes/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "pinia": "^2.1.4",
     "postcss": "^8",
+    "qrcode": "^1.5.3",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
