--- a/examenes/package.json
+++ b/examenes/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
+    "html2pdf.js": "^0.9.0",
     "pako": "^2.1.0",
     "pinia": "^2.1.4",
     "postcss": "^8",
