--- a/examenes/package.json
+++ b/examenes/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "autoprefixer": "^10",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
     "html2pdf.js": "^0.9.0",
+    "nodemailer": "^6.9.3",
     "pako": "^2.1.0",
     "pinia": "^2.1.4",
     "postcss": "^8",
